[gd_scene load_steps=2 format=3 uid="uid://b0l2fdu6g2f3f"]

[ext_resource type="Script" uid="uid://ejoy7wh81cv0" path="res://scripts/ui/pomodoro_timer.gd" id="1_mcguy"]

[node name="PomodoroTimer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mcguy")

[node name="startPauseButton" type="Button" parent="."]
layout_mode = 0
offset_right = 49.0
offset_bottom = 25.0
text = "Start"

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 30.0
offset_right = 48.0
offset_bottom = 53.0
text = "00:00"
horizontal_alignment = 1

[connection signal="pressed" from="startPauseButton" to="." method="_on_start_pause_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
